fixed pre word wrap on show message

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -972,10 +972,15 @@ table.messages tbody td {
 	font-size: 85%;
 	text-align: right;
 	}
-.message_body {
+pre.message_body {
 	padding: 10px;
 	border: 1px solid #ccc;
 	background: #efefef;
+	white-space: pre-wrap;       /* css-3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 	
 
